# vector-db-benchmark

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  analize.ipynb  fvs_test.py  gsi_run.sh  main.py  milvus_test.py  params.json  params_dev.json  parser.py  pymilvus_export_collection_europeana.py  pyproject.toml  recover_snapshot.py  requirements.txt  results.ipynb  run.py  run_all_engines.sh  run_europeana_exp.sh  run_europeana_exp_in_background.sh  run_europeana_one.bat  run_europeana_one.sh  sync.sh  sync_results.sh  test.ipynb
.github/: dependabot.yml
ansible/: Dockerfile  README.md
benchmark/: __init__.py  cli.py  collector.py  config_read.py  convert.py  dataset.py  engine.py  scenario.py  settings.py  snapshot.py  types.py
benchmark_cascade/: README.md  benchmark-configs.json  generate_configs.py
dataset_reader/: ann_compound_reader.py  ann_h5_reader.py  base_reader.py  h5_reader.py  json_reader.py  sparse_reader.py  tar_compound_reader.py
datasets/: .dockerignore  .gitignore  datasets.json
docs/: gog.md  tpuf-detailed-report.html  tpuf-exec-report.html  tpuf-pricing-calculator.html  turbopuffer-benchmark-report-v2.md  turbopuffer-benchmark-report.md  turbopuffer-report-simple-v2.md  turbopuffer-report-simple.md
examples/: remote-backend-local-client.md  remote-backend-remote-client.md
monitoring/: monitor_docker.sh
results/: probe-coldwarm-1781747719.json  probe-contention-1781849664.json  probe-cores-1781747854.json  probe-pinned-contention-1781851617.json  probe-pinned4r-1781767151.json  probe-routing-1781850722.json  probe-s3rtt-1781761738.json  qdrant-bq-default-dbpedia-openai-1M-1536-angular-search-0-2026-03-30-16-45-45.json  qdrant-bq-default-dbpedia-openai-1M-1536-angular-search-1-2026-03-30-16-47-21.json  qdrant-bq-default-dbpedia-openai-1M-1536-angular-search-2-2026-03-30-16-51-17.json  qdrant-bq-default-dbpedia-openai-1M-1536-angular-search-3-2026-03-30-17-00-37.json  qdrant-bq-default-dbpedia-openai-1M-1536-angular-upload-2026-03-30-16-45-01.json  qdrant-bq-rps-m-16-ef-128-dbpedia-openai-1M-1536-angular-search-0-2025-10-20-03-05-02.json  qdrant-bq-rps-m-16-ef-128-dbpedia-openai-1M-1536-angular-search-0-2025-10-20-03-29-08.json  qdrant-bq-rps-m-16-ef-128-dbpedia-openai-1M-1536-angular-search-1-2025-10-20-03-05-32.json  qdrant-bq-rps-m-16-ef-128-dbpedia-openai-1M-1536-angular-search-1-2025-10-20-03-29-36.json  (+118 more)
(+424 files in other folders)
